ros2_gps_ws/log/build_2022-09-13_15-02-26/sensor_data/stderr.log
  File "/home/pi/gps/Python-GPS-m8p-d/ros2_gps_ws/install/sensor_data/lib/python3.10/site-packages/sensor_data/my_first_node.py", line 26
    
    ^
SyntaxError: expected 'except' or 'finally' block

